# nearby-pp

./: CMakeLists.txt  LICENSE.md  README.md
hello/: CMakeLists.txt  main.cpp
led/: CMakeLists.txt  README.md  led.cpp
led/pi/: ledctrl.cpp  ledctrl.h
lib/: CMakeLists.txt  Cancellation.cpp  Cancellation.h  Discover.cpp  Discover.h  NearbyMessage.cpp  NearbyMessage.h  NearbyServer.cpp  NearbyServer.h  NearbySession.cpp  NearbySession.h  NotificationSocket.cpp  NotificationSocket.h  ProtoBuf.cpp  ProtoBuf.h  socket_platform.h
lib/pi/: Avahi.cpp  Avahi.h
lib/win32/: Bonjour.cpp  Bonjour.h
